--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Citátomat — PWA</title>
 
-<!-- PWA META -->
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#3b82f6">
-<link rel="apple-touch-icon" href="icon-192.png">
+  <!-- PWA META -->
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#4A90E2">
+
+<!-- Apple ikony -->
+<link rel="apple-touch-icon" sizes="192x192" href="/assets/citatomat-icon-192.png">
+<link rel="apple-touch-icon" sizes="512x512" href="/assets/citatomat-icon-512.png">
+
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 
 <style>
   :root{--bg:#f6f7fb;--card:#fff;--accent:#3b82f6;--muted:#6b7280}
