--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div style="width:48px;height:48px;border-radius:12px;background:linear-gradient(135deg,#ffd6a5,#ffadad);display:flex;align-items:center;justify-content:center;font-weight:700">😸</div>
     <div>
       <h1>Citátomat — PWA</h1>
-      <div style="color:var(--muted);font-size:0.85rem">Generuj šílené citáty. Ukládá do telefonu.</div>
+      <div style="color:var(--muted);font-size:0.85rem">Generuj šílené citáty. Ukládají se do telefonu.</div>
     </div>
   </header>
 
