--- a/index.html
+++ b/index.html
@@ -75,12 +75,39 @@
   </footer>
 
   <script>
-    const quotes = [
-      "Život je jako jízda na kole – abyste udrželi rovnováhu, musíte se pohybovat.",
-      "Nikdy není pozdě být tím, kým jste mohli být.",
-      "Štěstí přeje připraveným.",
-      "Věř, že můžeš – a jsi v polovině cesty."
-    ];
+const quotes = [
+    "Život je jako bonboniéra, nikdy nevíš, co ochutnáš.",
+    "Kdo se bojí, nesmí do lesa.",
+    "Nejlepší pomstou je obrovský úspěch.",
+    "Slova jsou zbytečná, činy mluví hlasitěji.",
+    "Kočka je pánem domu, člověk jen nájemník.",
+    "Čím více víš, tím více si uvědomuješ, že nic nevíš.",
+    "Kdo chce, hledá způsob. Kdo nechce, hledá důvod.",
+    "Není důležité, kolikrát spadneš, ale kolikrát vstaneš.",
+    "Lépe být chvíli blázen než celý život idiot.",
+    "Čas je nejdražší měna. Můžeš ho utratit jen jednou.",
+    "Velké věci nikdy nevznikly v komfortní zóně.",
+    "Začni tam, kde jsi. Použij, co máš. Dělej, co můžeš.",
+    "Nečekej na správný okamžik. Vytvoř si ho.",
+    "Každý expert byl kdysi začátečník.",
+    "Tvoje budoucnost začíná teď, ne zítra.",
+    "Kočky nejsou našimi mazlíčky. Jsme jejich personál.",
+    "Tam, kde spí kočka, je domov.",
+    "Když mluví kočka, lidé poslouchají… i když nechápou.",
+    "Kočka se nikdy neponíží tím, že poslechne.",
+    "Jedna kočka stačí k naplnění prázdného bytu štěstím.",
+    "Jsem na dietě. Dnes jen pět porcí dortu.",
+    "Práce není zajíc. Neuteče. Ale taky se sama neudělá.",
+    "Lepší být blázen s úsměvem než génius se žaludem v nose.",
+    "Mozek je skvělá věc. Škoda, že ho lidi nepoužívají častěji.",
+    "Kdybych měl dolar za každou chybu, co jsem udělal, byl bych milionář. A pořád dělal chyby.",
+    "Láska není o dokonalosti, ale o přijetí.",
+    "Skutečná láska začíná tam, kde končí očekávání.",
+    "Láska je jako Wi-Fi – silná, když jsi blízko, a občas vypadává.",
+    "Kočky nás učí milovat bez podmínek. A taky, že nedostaneš všechno, co chceš.",
+    "Srdce má důvody, které rozum nezná."
+];
+
 
     function halfCombine(a, b) {
       const wordsA = a.split(' ');
